bgr colour when running or paused

--- a/timer.html
+++ b/timer.html
@@ -6,6 +6,18 @@
       color: crimson;
     }
 
+    .isRunning {
+      background-color: rgb(103, 187, 183);
+    }
+
+    .isPaused {
+      background-color: lightsalmon;
+    }
+
+    .isNotRunning {
+      background-color: whitesmoke;
+    }
+
   </style>
 </head>
 
